--- a/src/main/webapp/WEB-INF/template/main.xhtml
+++ b/src/main/webapp/WEB-INF/template/main.xhtml
@@ -24,18 +24,31 @@
         <div class="container">
             <header class="mb-4 mt-4">
                 <h1>Simple RPG</h1>
+                <h:form styleClass="container d-flex  align-items-center justify-content-end"
+                        rendered="#{facesContext.externalContext.userPrincipal != null}">
+                    Logged: <h:outputText
+                        value="#{facesContext.externalContext.userPrincipal.name}"/>
+                    <h:commandButton styleClass="btn btn-link" value="wyloguj"
+                                     action="#{userLogout.logoutAction()}"/>
+                </h:form>
+                <h:graphicImage width="50px" rendered="#{facesContext.viewRoot.locale.language == 'pl'}"
+                                value="https://cdn.pixabay.com/photo/2018/06/02/05/17/poland-3447820_1280.png"/>
+                <h:graphicImage width="50px" rendered="#{facesContext.viewRoot.locale.language != 'pl'}"
+                                value="https://e7.pngegg.com/pngimages/559/44/png-clipart-european-union-flag-of-the-united-kingdom-british-flag-logo-thumbnail.png"/>
             </header>
 
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
                 <div class="container-fluid">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <h:link styleClass="nav-link" outcome="/index.xhtml">Home</h:link>
+                            <h:link styleClass="nav-link" outcome="/index.xhtml">#{msg.home}</h:link>
                         </li>
-                        <li class="nav-item">
-                            <h:link styleClass="nav-link"
-                                    outcome="/hotel/hotel_list.xhtml">Hotels</h:link>
-                        </li>
+                        <h:panelGroup rendered="#{facesContext.externalContext.isUserInRole('user')}">
+                            <li class="nav-item">
+                                <h:link styleClass="nav-link"
+                                        outcome="/hotel/hotel_list.xhtml">#{msg.hotels}</h:link>
+                            </li>
+                        </h:panelGroup>
                     </ul>
                 </div>
             </nav>
